--- a/career.html
+++ b/career.html
@@ -4,6 +4,12 @@
 	</head>
 
 <body>
+	<ul style="list-style-type:none">
+				<li><a href="index.html" target= "blank">HOME</a></li>
+				<li><a href="education.html" target= "blank">EDUCATION</a></li>
+				<li><a href="career.html" target= "blank">CAREER</a></li>
+				<li><a href="interests.html" target= "blank">INTERESTS</a></li>
+	</ul>
 
 		<div class= "container">
 		
