--- a/lithuania.html
+++ b/lithuania.html
@@ -4,6 +4,12 @@
 	</head>
 
 <body>
+	<ul style="list-style-type:none">
+				<li><a href="index.html" target= "blank">HOME</a></li>
+				<li><a href="education.html" target= "blank">EDUCATION</a></li>
+				<li><a href="career.html" target= "blank">CAREER</a></li>
+				<li><a href="interests.html" target= "blank">INTERESTS</a></li>
+	</ul>
 	
 	<div class= "container">
 		
@@ -28,7 +34,7 @@
 		<div class= "text3">
 			<p> Right after I finished my first semester at LCC, I was offered to administer TOEFL IBT tests that are held monthly in LCC. I was trained on how to 
 			host the test and how to connect the computers to the test. I learned a lot on how remote control work and how the tests are held. Also, for the first time
-			I became the supervisor and not the test-taker. A very interesting viewpoint comes with a lot of responsibilities and readability to solve any technical issues
+			I became the supervisor and not the test-taker. A very interesting viewpoint comes with a lot of responsibilities and at the ready to solve any technical issues
 			that might occur. </p>
 		</div>
 		
@@ -44,7 +50,7 @@
 			<p> I expressed my passion for computers and software throughout my whole first semester. After the first smester as well, in December, 2016,
 				I was offered an oppurtunity to intern for the Communications Office at LCC as a webmaster. I was assigned multible projects as a requirment to
 				join the team. Unfortunately, I could not really finish on time, for that was the first time I use WordPress, and first time writing code--I had 
-				final exams at that time. However I finished one project for the Admissions Office and was published on the website. VISA MANUAL. </p>
+				mid-term exams at that time. However I finished one project for the Admissions Office and was published on the website. VISA MANUAL. </p>
 		</div>
 		
 		<!--Photo-->
