--- a/education.html
+++ b/education.html
@@ -5,6 +5,16 @@
 
 <body>
 	
+	<ul style="list-style-type:none">
+				<li><a href="index.html" target= "blank">HOME</a></li>
+				<li><a href="education.html" target= "blank">EDUCATION</a></li>
+				<li><a href="career.html" target= "blank">CAREER</a></li>
+				<li><a href="interests.html" target= "blank">INTERESTS</a></li>
+	</ul>
+	
+	
+	
+	
 	<div class= "container">
 		
 		<div class= "header">
