--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
 					<a href="https://www.linkedin.com/in/ehab-abaideen-42b203102/" target= "blank">
 						<img src="linkedin.png">
 					</a>
-			
-					<div class="ftext">
-						<h1> Hire Me </h1>
-					</div>
+					
+					<!--add call for action button-->
+					
 			
 					<p> +370-645 15 889 </p>
 				</div>
