--- a/lithuania.html
+++ b/lithuania.html
@@ -8,6 +8,10 @@
 				<li><a href="index.html" target= "blank">HOME</a></li>
 				<li><a href="education.html" target= "blank">EDUCATION</a></li>
 				<li><a href="career.html" target= "blank">CAREER</a></li>
+					<ul2>
+						<li><a href="syria-turkey.html" target= "blank">SYR & TUR</a> </li>
+						<li><a href="lithuania.html" target= "blank">LT</a> </li>
+					</ul2>
 				<li><a href="interests.html" target= "blank">INTERESTS</a></li>
 	</ul>
 	
@@ -50,7 +54,8 @@
 			<p> I expressed my passion for computers and software throughout my whole first semester. After the first smester as well, in December, 2016,
 				I was offered an oppurtunity to intern for the Communications Office at LCC as a webmaster. I was assigned multible projects as a requirment to
 				join the team. Unfortunately, I could not really finish on time, for that was the first time I use WordPress, and first time writing code--I had 
-				mid-term exams at that time. However I finished one project for the Admissions Office and was published on the website. VISA MANUAL. </p>
+				mid-term exams at that time. However I finished one project for the Admissions Office and was published on the website. <b>
+				<a href="https://www.lcc.lt/home/admissions/admitted-students/visa-manual/" target= "blank">VISA MANUAL.</a></b></p>
 		</div>
 		
 		<!--Photo-->
@@ -72,8 +77,9 @@
 		</div>
 		
 		<!--Photo-->
-		
-		<img src="sc.jpg" class= "image4" align= "left">
+		<a href="https://spectrocoin.com/en/login.html" target= "blank">
+			<img src="sc.jpg" class= "image4" align= "left">
+		</a>
 		
 	</div>
 
