--- a/interests.html
+++ b/interests.html
@@ -34,8 +34,10 @@
 				weeks to get the event organized (hosted by LCC International University), for we knew there would come at least 150 people. We desingend the brochures and everything from A-Z.
 				We have had a lot of great of reactions and feedback.</p>
 		</div>
-			<img src="sevent2.jpg" class= "image2">
 		
+				<a href="https://drive.google.com/drive/folders/0B2YWomIUJq9tTDd6VnV1NlBDM0U?usp=sharing" target= "blank">
+			<img src="sevent2.jpg" class= "image2">
+				</a>
 
 		
 		
