IMG fixes and declaration fixes
IMG fixes and declaration fixes

--- a/education.html
+++ b/education.html
@@ -32,8 +32,8 @@
 		</div>
 
 		<div class= "photos">
-			<img src="lcc.jpg">
-			<img src="lcc2.jpg">
+			<img src="lcc.jpg" alt= "LCC International Univerisity">
+			<img src="lcc2.jpg" alt= "LCC International Univerisity2">
 		
 		</div>
 		
