--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</ul>
 		
 		
-		<img src="ehab.jpg">
+		<img src="ehab.jpg" alt= "my photo">
 		
 		
 			<div class="col1">
@@ -31,10 +31,10 @@
 			</div>
 				<div class="footer">
 					<a href="https://www.facebook.com/EAbaideen" target= "blank">
-						<img src="facebook.png">
+						<img src="facebook.png" alt= "facebook">
 					</a>
 					<a href="https://www.linkedin.com/in/ehab-abaideen-42b203102/" target= "blank">
-						<img src="linkedin.png">
+						<img src="linkedin.png" alt= "LinkedIn">
 					</a>
 					
 					<!--add call for action button-->
