--- a/lithuania.html
+++ b/lithuania.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="lithuania.css">
-		<title> Lithuania </title>
 	</head>
 
 <body>
@@ -31,7 +29,7 @@
 
 		<!--Photo-->
 		
-		<img src="tutor.jpg" class= "image1" align= "right">
+		<img src="tutor.jpg" class= "image1" align= "right" alt= "Tutor">
 		
 		<div class= "text2">
 			<p> I had some time to concentrate on my studies and was able to excel my English language. </p>
@@ -46,7 +44,7 @@
 		
 		<!--Photo-->
 		
-		<img src="toefl.jpg" class= "image2" align= "left">
+		<img src="toefl.jpg" class= "image2" align= "left" alt= "TOEFL">
 
 		<div class= "text4">
 			<p> I still administer TOEFL IBT tests until this time and had more offers along with it. </p>
@@ -62,7 +60,7 @@
 		
 		<!--Photo-->
 		
-		<img src="webmaster.jpg" class= "image3" align= "right">
+		<img src="webmaster.jpg" class= "image3" align= "right" alt= "webmaster">
 		
 		<div class= "text6">
 			<p> Then, I decided to take it down for sometime and focus on my personal life for some time. </p>
@@ -80,7 +78,7 @@
 		
 		<!--Photo-->
 		<a href="https://spectrocoin.com/en/login.html" target= "blank">
-			<img src="sc.jpg" class= "image4" align= "left">
+			<img src="sc.jpg" class= "image4" align= "left" alt= "Spectrocoin">
 		</a>
 		
 	</div>
