--- a/syria-turkey.html
+++ b/syria-turkey.html
@@ -35,8 +35,8 @@
 			many groups. I had no option, but to close the shop and start thinking about immigration.</p>
 		</div>
 
-		<img src="store.jpg" class= "image1">
-		<img src="ios.jpg" class= "image2" align= "right">
+		<img src="store.jpg" class= "image1" alt= "my shop">
+		<img src="ios.jpg" class= "image2" align= "right" alt= "IOS devices">
 		
 		<div class= "text2">
 			<p> In Augest, 2015, I made up my mind to immigrate to Turkey and seek other pathways (FUTURE). Unluckily, it was not as easy as it seems when you are
