--- a/interests.html
+++ b/interests.html
@@ -38,7 +38,7 @@
 		</div>
 		
 				<a href="https://drive.google.com/drive/folders/0B2YWomIUJq9tTDd6VnV1NlBDM0U?usp=sharing" target= "blank">
-			<img src="sevent2.jpg" class= "image2">
+			<img src="sevent2.jpg" class= "image2" alt= "Portfolio">
 				</a>
 
 		
