ALT fixed and titles

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 		<div class="main">
 		
 			<ul>
-				<li><a href="index.html" target= "blank">HOME</a></li>
-				<li><a href="education.html" target= "blank">EDUCATION</a></li>
-				<li><a href="career.html" target= "blank">CAREER</a></li>
-				<li><a href="interests.html" target= "blank">INTERESTS</a></li>
+				<li><a href="index.html" target= "_blank">HOME</a></li>
+				<li><a href="education.html" target= "_blank">EDUCATION</a></li>
+				<li><a href="career.html" target= "_blank">CAREER</a></li>
+				<li><a href="interests.html" target= "_blank">INTERESTS</a></li>
 			</ul>
 		
 		
@@ -30,10 +30,10 @@
 				I am currently working as Costumer Support Specialist in a cryptocurrency company called SpectroFinance </p>
 			</div>
 				<div class="footer">
-					<a href="https://www.facebook.com/EAbaideen" target= "blank">
+					<a href="https://www.facebook.com/EAbaideen" target= "_blank">
 						<img src="facebook.png" alt= "facebook">
 					</a>
-					<a href="https://www.linkedin.com/in/ehab-abaideen-42b203102/" target= "blank">
+					<a href="https://www.linkedin.com/in/ehab-abaideen-42b203102/" target= "_blank">
 						<img src="linkedin.png" alt= "LinkedIn">
 					</a>
 					
