--- a/career.html
+++ b/career.html
@@ -6,10 +6,10 @@
 
 <body>
 	<ul style="list-style-type:none">
-				<li><a href="index.html" target= "blank">HOME</a></li>
-				<li><a href="education.html" target= "blank">EDUCATION</a></li>
-				<li><a href="career.html" target= "blank">CAREER</a></li>
-				<li><a href="interests.html" target= "blank">INTERESTS</a></li>
+				<li><a href="index.html" target= "_blank">HOME</a></li>
+				<li><a href="education.html" target= "_blank">EDUCATION</a></li>
+				<li><a href="career.html" target= "_blank">CAREER</a></li>
+				<li><a href="interests.html" target= "_blank">INTERESTS</a></li>
 	</ul>
 
 		<div class= "container">
@@ -25,10 +25,10 @@
 			</div>
 			
 			
-				<a href="syria-turkey.html" target= "blank" alt="2012-2016">
+				<a href="syria-turkey.html" target= "_blank" alt="2012-2016">
 					<img src="stflag.jpg" class= "image1">
 				</a>
-				<a href="lithuania.html" target= "blank" alt="2016-Now">
+				<a href="lithuania.html" target= "_blank" alt="2016-Now">
 					<img src="ltflag.jpg" align="right" class= "image2">
 				</a>
 				
