--- a/education.html
+++ b/education.html
@@ -8,10 +8,10 @@
 <body>
 	
 	<ul style="list-style-type:none">
-				<li><a href="index.html" target= "blank">HOME</a></li>
-				<li><a href="education.html" target= "blank">EDUCATION</a></li>
-				<li><a href="career.html" target= "blank">CAREER</a></li>
-				<li><a href="interests.html" target= "blank">INTERESTS</a></li>
+				<li><a href="index.html" target= "_blank">HOME</a></li>
+				<li><a href="education.html" target= "_blank">EDUCATION</a></li>
+				<li><a href="career.html" target= "_blank">CAREER</a></li>
+				<li><a href="interests.html" target= "_blank">INTERESTS</a></li>
 	</ul>
 	
 	
