--- a/interests.html
+++ b/interests.html
@@ -7,10 +7,10 @@
 
 <body>
 	<ul style="list-style-type:none">
-				<li><a href="index.html" target= "blank">HOME</a></li>
-				<li><a href="education.html" target= "blank">EDUCATION</a></li>
-				<li><a href="career.html" target= "blank">CAREER</a></li>
-				<li><a href="interests.html" target= "blank">INTERESTS</a></li>
+				<li><a href="index.html" target= "_blank">HOME</a></li>
+				<li><a href="education.html" target= "_blank">EDUCATION</a></li>
+				<li><a href="career.html" target= "_blank">CAREER</a></li>
+				<li><a href="interests.html" target= "_blank">INTERESTS</a></li>
 	</ul>
 	
 	<div class= "container">
@@ -37,7 +37,7 @@
 				We have had a lot of great of reactions and feedback.</p>
 		</div>
 		
-				<a href="https://drive.google.com/drive/folders/0B2YWomIUJq9tTDd6VnV1NlBDM0U?usp=sharing" target= "blank">
+				<a href="https://drive.google.com/drive/folders/0B2YWomIUJq9tTDd6VnV1NlBDM0U?usp=sharing" target= "_blank">
 			<img src="sevent2.jpg" class= "image2" alt= "Portfolio">
 				</a>
 
