--- a/lithuania.html
+++ b/lithuania.html
@@ -1,18 +1,19 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="lithuania.css">
+		<title> lithuania </title>
 	</head>
 
 <body>
 	<ul style="list-style-type:none">
-				<li><a href="index.html" target= "blank">HOME</a></li>
-				<li><a href="education.html" target= "blank">EDUCATION</a></li>
-				<li><a href="career.html" target= "blank">CAREER</a></li>
+				<li><a href="index.html" target= "_blank">HOME</a></li>
+				<li><a href="education.html" target= "_blank">EDUCATION</a></li>
+				<li><a href="career.html" target= "_blank">CAREER</a></li>
 					<ul2>
-						<li><a href="syria-turkey.html" target= "blank">SYR & TUR</a> </li>
-						<li><a href="lithuania.html" target= "blank">LT</a> </li>
+						<li><a href="syria-turkey.html" target= "_blank">SYR & TUR</a> </li>
+						<li><a href="lithuania.html" target= "_blank">LT</a> </li>
 					</ul2>
-				<li><a href="interests.html" target= "blank">INTERESTS</a></li>
+				<li><a href="interests.html" target= "_blank">INTERESTS</a></li>
 	</ul>
 	
 	<div class= "container">
@@ -55,7 +56,7 @@
 				I was offered an oppurtunity to intern for the Communications Office at LCC as a webmaster. I was assigned multible projects as a requirment to
 				join the team. Unfortunately, I could not really finish on time, for that was the first time I use WordPress, and first time writing code--I had 
 				mid-term exams at that time. However I finished one project for the Admissions Office and was published on the website. <b>
-				<a href="https://www.lcc.lt/home/admissions/admitted-students/visa-manual/" target= "blank">VISA MANUAL.</a></b></p>
+				<a href="https://www.lcc.lt/home/admissions/admitted-students/visa-manual/" target= "_blank">VISA MANUAL.</a></b></p>
 		</div>
 		
 		<!--Photo-->
@@ -77,7 +78,7 @@
 		</div>
 		
 		<!--Photo-->
-		<a href="https://spectrocoin.com/en/login.html" target= "blank">
+		<a href="https://spectrocoin.com/en/login.html" target= "_blank">
 			<img src="sc.jpg" class= "image4" align= "left" alt= "Spectrocoin">
 		</a>
 		
