--- a/syria-turkey.html
+++ b/syria-turkey.html
@@ -7,15 +7,15 @@
 
 <body>
 	<ul style="list-style-type:none">
-				<li><a href="index.html" target= "blank">HOME</a></li>
-				<li><a href="education.html" target= "blank">EDUCATION</a></li>
-				<li><a href="career.html" target= "blank">CAREER</a>
+				<li><a href="index.html" target= "_blank">HOME</a></li>
+				<li><a href="education.html" target= "_blank">EDUCATION</a></li>
+				<li><a href="career.html" target= "_blank">CAREER</a>
 					<ul2 style="list-style-type:none" id= "list">
-						<li><a href="syria-turkey.html" target= "blank">SYR & TUR</a></li>
-						<li><a href="lithuania.html" target= "blank">LT</a></li>
+						<li><a href="syria-turkey.html" target= "_blank">SYR & TUR</a></li>
+						<li><a href="lithuania.html" target= "_blank">LT</a></li>
 					</ul2>
 				</li>
-				<li><a href="interests.html" target= "blank">INTERESTS</a></li>
+				<li><a href="interests.html" target= "_blank">INTERESTS</a></li>
 	</ul>
 	
 	
