Fixed UL and hrefs

--- a/career.html
+++ b/career.html
@@ -25,10 +25,10 @@
 			</div>
 			
 			
-				<a href="syria-turkey.html" target= "_blank" alt="2012-2016">
+				<a href="syria-turkey.html" alt="2012-2016">
 					<img src="stflag.jpg" class= "image1">
 				</a>
-				<a href="lithuania.html" target= "_blank" alt="2016-Now">
+				<a href="lithuania.html" alt="2016-Now">
 					<img src="ltflag.jpg" align="right" class= "image2">
 				</a>
 				
