--- a/syria-turkey.html
+++ b/syria-turkey.html
@@ -6,14 +6,14 @@
 	</head>
 
 <body>
-	<ul style="list-style-type:none">
+	<ul style="list-style-type:none" class= "nav">
 				<li><a href="index.html" target= "_blank">HOME</a></li>
 				<li><a href="education.html" target= "_blank">EDUCATION</a></li>
 				<li><a href="career.html" target= "_blank">CAREER</a>
-					<ul2 style="list-style-type:none" id= "list">
-						<li><a href="syria-turkey.html" target= "_blank">SYR & TUR</a></li>
-						<li><a href="lithuania.html" target= "_blank">LT</a></li>
-					</ul2>
+					<ul style="list-style-type:none">
+						<li><a href="syria-turkey.html">SYR & TUR</a></li>
+						<li><a href="lithuania.html">LT</a></li>
+					</ul>
 				</li>
 				<li><a href="interests.html" target= "_blank">INTERESTS</a></li>
 	</ul>
