--- a/lithuania.html
+++ b/lithuania.html
@@ -5,14 +5,15 @@
 	</head>
 
 <body>
-	<ul style="list-style-type:none">
+	<ul style="list-style-type:none" class= "nav">
 				<li><a href="index.html" target= "_blank">HOME</a></li>
 				<li><a href="education.html" target= "_blank">EDUCATION</a></li>
-				<li><a href="career.html" target= "_blank">CAREER</a></li>
-					<ul2>
-						<li><a href="syria-turkey.html" target= "_blank">SYR & TUR</a> </li>
-						<li><a href="lithuania.html" target= "_blank">LT</a> </li>
-					</ul2>
+				<li><a href="career.html" target= "_blank">CAREER</a>
+					<ul style="list-style-type:none">
+						<li><a href="syria-turkey.html">SYR & TUR</a> </li>
+						<li><a href="lithuania.html">LT</a> </li>
+					</ul>
+				</li>
 				<li><a href="interests.html" target= "_blank">INTERESTS</a></li>
 	</ul>
 	
