Spelling and grammar fixes and alignments

--- a/career.html
+++ b/career.html
@@ -6,10 +6,10 @@
 
 <body>
 	<ul style="list-style-type:none">
-				<li><a href="index.html" target= "_blank">HOME</a></li>
-				<li><a href="education.html" target= "_blank">EDUCATION</a></li>
-				<li><a href="career.html" target= "_blank">CAREER</a></li>
-				<li><a href="interests.html" target= "_blank">INTERESTS</a></li>
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="education.html">EDUCATION</a></li>
+				<li><a href="career.html">CAREER</a></li>
+				<li><a href="interests.html">INTERESTS</a></li>
 	</ul>
 
 		<div class= "container">
@@ -18,10 +18,9 @@
 				<h1> CAREER </h1>
 			</div>
 			<div class= "text">
-				<p> I consider my career life as two paths.<br /> The first is from 2012 to 2016 where I had been working in Syria and Turkey.<br /> The second
-					path is in Lithuania, where I am currently residing at this point of time.<br /> I have gained invaluable experiences in each step of my career
-					progression.<br /> Please hover over the photos and click on them to be redirected to the specific jobs I have been assosiated 
-					and for more information about my job responsibilities.</p>
+				<p> I consider my career life as two paths.<br /> The first is from 2012 to 2016 where I had been working in Syria and Turkey.<br />
+					The second path is in Lithuania, where I am currently residing at this point in time.<br /> I have gained invaluable experiences in each step of my career progression.<br />
+					Please hover over the photos and click on them to be redirected to the specific jobs I have been associated and for more information about my job responsibilities.</p>
 			</div>
 			
 			
