--- a/education.html
+++ b/education.html
@@ -8,10 +8,10 @@
 <body>
 	
 	<ul style="list-style-type:none">
-				<li><a href="index.html" target= "_blank">HOME</a></li>
-				<li><a href="education.html" target= "_blank">EDUCATION</a></li>
-				<li><a href="career.html" target= "_blank">CAREER</a></li>
-				<li><a href="interests.html" target= "_blank">INTERESTS</a></li>
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="education.html">EDUCATION</a></li>
+				<li><a href="career.html">CAREER</a></li>
+				<li><a href="interests.html">INTERESTS</a></li>
 	</ul>
 	
 	
@@ -24,11 +24,11 @@
 		</div>
 		
 		<div class= "text">
-			<p> I graduated highschool in 2012 and got my diploma. <br />
-			Afterwards, I tried to get the most I can to go to college in my hometown in Syria, but could not because all young men who are able to serve 
-			for the country were mandated to serve in the military. As a result, I stayed in my hometown which was controlled by the rebels. <br />
-			After 4 years of trying to find my path toward my future, I finally got accepted in LCC International Univerisity. <br />
-			I am studying Contemporary Communications <b> at the moment and have finished my first year.</b> </p>
+			<p> I graduated high school in 2012 and got my diploma. <br />
+			Afterwards, I tried to get the most I can to go to college in my hometown in Syria, but could not because all young men who are able to serve the country were mandated to serve in the military.
+			As a result, I stayed in my hometown which was controlled by the rebels.<br />
+			After 4 years of trying to find my path toward my future, I finally got accepted in LCC International Univerisity.<br />
+			I am studying Contemporary Communications at the moment and have finished my first year.</b> </p>
 		</div>
 
 		<div class= "photos">
