--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 		<div class="main">
 		
 			<ul>
-				<li><a href="index.html" target= "_blank">HOME</a></li>
-				<li><a href="education.html" target= "_blank">EDUCATION</a></li>
-				<li><a href="career.html" target= "_blank">CAREER</a></li>
-				<li><a href="interests.html" target= "_blank">INTERESTS</a></li>
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="education.html">EDUCATION</a></li>
+				<li><a href="career.html">CAREER</a></li>
+				<li><a href="interests.html">INTERESTS</a></li>
 			</ul>
 		
 		
@@ -22,12 +22,13 @@
 		
 			<div class="col1">
 				<h1> About Me </h1><br />
-				<p> My name is Ehab Abaideen, and I am a sophomore at LCC International University--I study Contemporary Communications. <br />
+				<p> My name is Ehab Abaideen, and I am a sophomore at LCC International University–I study Contemporary Communications. <br />
 				In the past, I had my own computer shop in my home, Syria, and worked there for about three years and gained valuable skills and experiences.<br /> 
-				I moved to Turkey in 2015 seeking other opportunities and better life circumstances,  and worked in multible fields, yet I were not fully satisfied. <br />
-				 As a result, I sought to take one more step towards my education.<br /> Additionally, I am whole-heartedly fund in design and animations. I spend tens of hours per PowerPoint presentation just for the sake of making it most compelling. 
-				 At LCC, I had the opportunity to work as webmaster intern in the communications office and done multible projects for the communications office and addmissions office.<br /> 
-				I am currently working as Costumer Support Specialist in a cryptocurrency company called SpectroFinance </p>
+				I moved to Turkey in 2015 seeking other opportunities and better life circumstances and worked in multiple fields, yet I was not fully satisfied. <br />
+				As a result, I sought to take one more step towards my education.<br /> Additionally, I am whole-heartedly fond design and animations.
+				I spend tens of hours per PowerPoint presentation just for the sake of making it most compelling.
+				At LCC, I had the opportunity to work as webmaster intern in the communications office and done multiple projects for the communications office and admissions office.<br /> 
+				I am currently working as Customer Support Specialist in a cryptocurrency company called SpectroFinance. </p>
 			</div>
 				<div class="footer">
 					<a href="https://www.facebook.com/EAbaideen" target= "_blank">
