--- a/lithuania.html
+++ b/lithuania.html
@@ -6,15 +6,15 @@
 
 <body>
 	<ul style="list-style-type:none" class= "nav">
-				<li><a href="index.html" target= "_blank">HOME</a></li>
-				<li><a href="education.html" target= "_blank">EDUCATION</a></li>
-				<li><a href="career.html" target= "_blank">CAREER</a>
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="education.html">EDUCATION</a></li>
+				<li><a href="career.html">CAREER</a>
 					<ul style="list-style-type:none">
-						<li><a href="syria-turkey.html">SYR & TUR</a> </li>
-						<li><a href="lithuania.html">LT</a> </li>
+						<li><a href="syria-turkey.html">SYR & TUR</a></li>
+						<li><a href="lithuania.html">LT</a></li>
 					</ul>
 				</li>
-				<li><a href="interests.html" target= "_blank">INTERESTS</a></li>
+				<li><a href="interests.html">INTERESTS</a></li>
 	</ul>
 	
 	<div class= "container">
@@ -24,9 +24,7 @@
 		</div>
 		
 		<div class= "text">
-			<p> I arrived to Lithuania on 1st of July 2016, and participated in language course hosted by LCC called SLI (Summer Language Institute), a three-week
-				intensive English course. Afterwards, I had the oppurtunity to tutor a Lithunian girl in Enlish instructions. It lasted for about 4 months and then
-				I could not manage my schedule to match hers. Therefore, had to stop it</p>
+			<p> I arrived in Lithuania on 1st of July 2016 and participated in language course hosted by LCC called SLI (Summer Language Institute), a three-week intensive English course. Afterwards, I had the opportunity to tutor a Lithuanian girl in English instructions. It lasted for about 4 months and then I could not manage my schedule to match hers. Therefore, had to stop it.</p>
 		</div>
 
 		<!--Photo-->
@@ -38,10 +36,7 @@
 		</div>
 		
 		<div class= "text3">
-			<p> Right after I finished my first semester at LCC, I was offered to administer TOEFL IBT tests that are held monthly in LCC. I was trained on how to 
-			host the test and how to connect the computers to the test. I learned a lot on how remote control work and how the tests are held. Also, for the first time
-			I became the supervisor and not the test-taker. A very interesting viewpoint comes with a lot of responsibilities and at the ready to solve any technical issues
-			that might occur. </p>
+			<p> Right after I finished my first semester at LCC, I was offered to administer TOEFL IBT tests that are held monthly in LCC. I was trained on how to host the test and how to connect the computers to the test. I learned a lot about how remote control work and how the tests are held. Also, for the first time, I became the supervisor and not the test-taker. A very interesting viewpoint comes with a lot of responsibilities and at the ready to solve any technical issues that might occur.</p>
 		</div>
 		
 		<!--Photo-->
@@ -53,10 +48,8 @@
 		</div>
 		
 		<div class= "text5">
-			<p> I expressed my passion for computers and software throughout my whole first semester. After the first smester as well, in December, 2016,
-				I was offered an oppurtunity to intern for the Communications Office at LCC as a webmaster. I was assigned multible projects as a requirment to
-				join the team. Unfortunately, I could not really finish on time, for that was the first time I use WordPress, and first time writing code--I had 
-				mid-term exams at that time. However I finished one project for the Admissions Office and was published on the website. <b>
+			<p> I expressed my passion for computers and software throughout my whole first semester. After the first semester as well, in December 2016, I was offered an opportunity to intern for the Communications Office at LCC as a webmaster. I was assigned multiple projects as a requirement to join the team. Unfortunately, I could not really finish on time, for that was the first time I use WordPress, and first time writing code–I had mid-term exams at that time.
+			However, I finished one project for the Admissions Office and was published on the website. <b>
 				<a href="https://www.lcc.lt/home/admissions/admitted-students/visa-manual/" target= "_blank">VISA MANUAL.</a></b></p>
 		</div>
 		
@@ -65,17 +58,11 @@
 		<img src="webmaster.jpg" class= "image3" align= "right" alt= "webmaster">
 		
 		<div class= "text6">
-			<p> Then, I decided to take it down for sometime and focus on my personal life for some time. </p>
+			<p> Then, I decided to take it down for some time and focus on my personal life for some time. </p>
 		</div>
 		
 		<div class= "text7">
-			<p> After a the second semester passed by with fairly good academic competence, I started looking for summer internships or jobs.
-				I was given contacts to a company that designs websites in the same city I am residing in, Klaipeda. I went and had a meeting with the manager.
-				He was really understanding and adviced me what to focus on before the internship. Unfortunately, he had all spots for interns taken, and I 
-				had to wait for someone to leave. I then was told that there are opennings at a company that works with cryptocurrencies. For the sake 
-				of trying, I applied even though I knew nothing about cryptocurrencies. I got the job on the first of August 2017. I am still on top of my 
-				job and able to multitask more than I ever thought I would be. I have learned a lot about online banking and cryptocurrencies. Fairly succeeded in
-				building capacity to handle the pressure of complaints and angry clients. I am able now to chat with six clients concurrently. </p>
+			<p> After the second semester passed by with fairly good academic competence, I started looking for summer internships or jobs. I was given contracts to a company that designs websites in the same city I am residing in, Klaipeda. I went and had a meeting with the manager. He was really understanding and advice me what to focus on before the internship. Unfortunately, he had all spots for interns taken, and I had to wait for someone to leave. I then was told that there are openings at a company that works with cryptocurrencies. For the sake of trying, I applied even though I knew nothing about cryptocurrencies. I got the job as customer support agent on the first of August 2017. I am still on top of my job and able to multitask more than I ever thought I would be. I have learned a lot about online banking and cryptocurrencies. Fairly succeeded in building capacity to handle the pressure of complaints and abstract clients. I am able now to chat with six clients concurrently along with taking actions to solve minor issues they might face. </p>
 		</div>
 		
 		<!--Photo-->
