--- a/syria-turkey.html
+++ b/syria-turkey.html
@@ -7,15 +7,15 @@
 
 <body>
 	<ul style="list-style-type:none" class= "nav">
-				<li><a href="index.html" target= "_blank">HOME</a></li>
-				<li><a href="education.html" target= "_blank">EDUCATION</a></li>
-				<li><a href="career.html" target= "_blank">CAREER</a>
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="education.html">EDUCATION</a></li>
+				<li><a href="career.html">CAREER</a>
 					<ul style="list-style-type:none">
 						<li><a href="syria-turkey.html">SYR & TUR</a></li>
 						<li><a href="lithuania.html">LT</a></li>
 					</ul>
 				</li>
-				<li><a href="interests.html" target= "_blank">INTERESTS</a></li>
+				<li><a href="interests.html">INTERESTS</a></li>
 	</ul>
 	
 	
@@ -26,25 +26,25 @@
 		</div>
 		
 		<div class= "text">
-			<p> After graduation, I could not go to college as I mentioned before. Therefore, I started looking for alternatives on what to do with my life instead of 
-			just sitting, eating and sleeping. <br /> My family owns a couple of lands and shops and so I thought to open a shop and see how that will turn out.
-			My one interest was back at that time was COMPUTERS, so I just went for it. I had managed the shop for about three years.<br /> 
-			I was responsible for managing the store and find ways to keep maintaining the flow of goods, which was not easy during the conflict. I was also in charge
-			of Windows and IOS software maintenance with the fairly good knowledge I have about both operating systems. Additionally, occasionally repairing PCs and 
-			some parts of laptops along with selling accessories and laptops.<br /> Unfortunately, that did not last for long since in 2015 my hometown was under constant airstrikes and invasions by 
-			many groups. I had no option, but to close the shop and start thinking about immigration.</p>
+			<p> After graduation, I could not go to college as I mentioned before.
+			Therefore, I started looking for alternatives on what to do with my life instead of just sitting, eating and sleeping. <br /> My family owns a couple of lands and shops and so I thought to open a shop and see how that will turn out.
+			My family owns a couple of lands and shops and so I thought to open a shop and see how that will turn out. My one interest back at that time was COMPUTERS, so I just went for it. I had managed the shop for about three years.<br /> 
+			I was responsible for managing the store and find ways to keep maintaining the flow of goods, which was not easy during the conflict. I was also in charge of Windows and IOS software maintenance with the fairly good knowledge I have about both operating systems. Additionally, occasionally repairing PCs and some parts of laptops along with selling accessories and laptops.<br />
+			Unfortunately, that did not last for long since in 2015 my hometown was under constant airstrikes and invasions by many groups. I had no option, but to close the shop and start thinking about immigration.</p>
 		</div>
 
 		<img src="store.jpg" class= "image1" alt= "my shop">
 		<img src="ios.jpg" class= "image2" align= "right" alt= "IOS devices">
 		
 		<div class= "text2">
-			<p> In Augest, 2015, I made up my mind to immigrate to Turkey and seek other pathways (FUTURE). Unluckily, it was not as easy as it seems when you are
-			about 20 years old and you think life is easy. I headed to Istanbul to work. I had to work in many dead-end jobs. Nothing to gain--neither experience, nor savings for about 6 months. <br />
-			I decided to go back to Syria rather than getting humilated by closed-minded people. I went to another city, Antakya, where my brother was living.
-			Took some training courses to strengthen my possibilities of getting a decent job. At that time, I heard about LCC International University. They were
-			offering scholarships to people whom their education was disrupted due to conflicts. I found my last window of hope to go for my future. I applied
-			and was accepted.</p>
+			<p> In August 2015, I made up my mind to immigrate to Turkey and seek other pathways (FUTURE). Unluckily, it was not as easy as it seems when you are about 20 years old and you think life is easy. I headed to Istanbul to work. I had to work in many dead-end jobs. Nothing to gain–neither experience nor savings for about 6 months. <br />
+			I decided to go back to Syria rather than getting humiliated by closed-minded people (No generalization intended).
+			I went to another city, Antakya, where my brother was living.
+			Took some training courses to strengthen my possibilities of getting a decent job.
+			At that time, I heard about LCC International University.
+			They were offering scholarships to people whom their education was disrupted due to conflicts.
+			I found my last window of hope to go for my future.
+			I applied and was accepted.</p>
 		</div>
 
 
