Updated with Marketing job and new CV
Updated with Marketing job and new CV

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 				In the past, I had my own computer shop in my home, Syria, and worked there for about three years and gained valuable skills and experiences.<br /> 
 				I moved to Turkey in 2015 seeking other opportunities and better life circumstances and worked in multiple fields, yet I was not fully satisfied. <br />
 				As a result, I sought to take one more step towards my education.<br /> Additionally, I am whole-heartedly fond design and animations.
-				I spend tens of hours per PowerPoint presentation just for the sake of making it most compelling.
-				At LCC, I had the opportunity to work as webmaster intern in the communications office and done multiple projects for the communications office and admissions office.<br /> 
-				I am currently working as Customer Support Specialist in a cryptocurrency company called SpectroFinance. </p>
+				I spend tens of hours per PowerPoint presentation just for the sake of making it most compelling. 
+				At LCC, I had the opportunity to work as webmaster intern in the communications office and done multiple projects for the communications office
+				and admissions office.<br /> 
+				I worked as Customer Support Specialist in a cryptocurrency company called SpectroFinance. At the moment, I am Marketing Assistant for the same company. </p>
 			</div>
 				<div class="footer">
 					<a href="https://www.facebook.com/EAbaideen" target= "_blank">
